# defiads

./: .gitignore  Cargo.toml  NOTICE  README.md
design/: economics.md  history.md  protocol.md
src/: ad.rs  adtext.rs  api.rs  blockdownload.rs  content.rs  db.rs  discovery.rs  error.rs  find_peers.rs  funding.rs  iblt.rs  lib.rs  messages.rs  p2p_biadnet.rs  p2p_bitcoin.rs  p2p_defiads.rs  sendtx.rs  store.rs  text.rs  updater.rs  wallet.rs
src/biadnet/: main.rs
src/defiads/: main.rs
