[package]
name = "biadne"
version = "0.1.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
edition = "2018"

[dependencies]
snap = "0.2"
byteorder = "1"
serde = "1"
serde_derive = "1"
serde_cbor = "0.10"
bitcoin_hashes={version="0.3", features=["serde"]}
bitcoin={version="0.18", features=["serde"]}
siphasher="0.3"

[dev-dependencies]
hex="0.3"