[package]
name = "biadne"
version = "0.1.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
edition = "2018"

[[bin]]
name="biadnet"
path="src/biadnet/main.rs"

[dependencies]
snap = "0.2"
byteorder = "1"
serde = "1"
serde_derive = "1"
serde_cbor = "0.10"
serde_json = "1.0"
bitcoin_hashes={version="0.7", features=["serde"]}
bitcoin={ git= "https://github.com/tamasblummer/rust-bitcoin.git", branch = "patches", features=["serde", "bitcoinconsensus"]}
secp256k1={version="0.15", features=["rand", "serde"]}
bitcoin-wallet={git="https://github.com/tamasblummer/rust-wallet.git", branch = "master"}
murmel={git="https://github.com/tamasblummer/murmel.git", branch = "master"}
siphasher="0.3"
rand = "0.7"
rand_distr = "0.2"
log="0.4"
futures={ git= "https://github.com/tamasblummer/futures-rs.git", tag = "0.2.1" }
rusqlite={version="0.20", features=["bundled"]}
jsonrpc-http-server = "13.0"
clap = "2.33"
toml="0.5"
base64="0.10"
hex="0.3"
simplelog="0.6"
log-panics = "2.0"
dirs="2.0.2"
lru-cache = "0.1.2"
